# pake

./: .gitignore  Makefile  Makefile.am  README  config.h.in  configure  configure.in
config/: .gitignore
pake/: Makefile.am  pake.c  pake.h
src/: Makefile  pake.c  pake.h
test/: .gitignore  Makefile  Makefile.am  test_pake.c  test_pake.h
